<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2013, Yubico AB.  All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions
  ~ are met:
  ~
  ~ * Redistributions of source code must retain the above copyright
  ~   notice, this list of conditions and the following disclaimer.
  ~
  ~ * Redistributions in binary form must reproduce the above copyright
  ~   notice, this list of conditions and the following
  ~   disclaimer in the documentation and/or other materials provided
  ~   with the distribution.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND
  ~ CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,
  ~ INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
  ~ MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
  ~ BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
  ~ EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
  ~ TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
  ~ DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
  ~ TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
  ~ THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  ~ SUCH DAMAGE.
  -->

<resources>

    <string name="app_name">Yubico Authenticator</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="barcode_scanner_not_found">Barcode scanner not found, do you want to install it?</string>
    <string name="invalid_barcode">The scanned barcode is invalid</string>
    <string name="scan_failed">Barcode scanning failed</string>
    <string name="swipe">Tap your YubiKey NEO</string>
    <string name="swipe_and_hold">Tap and hold your YubiKey NEO</string>
    <string name="swipe_to_list">Tap your YubiKey NEO to view credentials</string>
    <string name="swipe_to_put">Tap your YubiKey NEO to store</string>
    <string name="totp">Oath TOTP</string>
    <string name="copy">Copy to clipboard</string>
    <string name="copied">Code copied to clipboard</string>
    <string name="prog_success">Credential added!</string>
    <string name="prog_fail">Failed to program the YubiKey NEO</string>
    <string name="version">Version</string>
    <string name="tag_error">Error in YubiKey communication!</string>
    <string name="tag_error_retry">Error in YubiKey communication! Try again.</string>
    <string name="nfc_off">NFC is disabled!</string>
    <string name="no_nfc">This device seems to not support NFC</string>
    <string name="enable_nfc">Enable NFC</string>
    <string name="unsupported_applet_version">Unsupported applet version on NEO, make sure this app is up to date!</string>
    <string name="applet_missing">Yubico Authenticator applet not installed on NEO!</string>
    <string name="credentials">Credentials</string>
    <string name="load_failed">Failed loading credentials</string>
    <string name="credential_name">Credential name</string>
    <string name="empty_list">Empty credentials list</string>
    <string name="enter_credential_name">Enter credential name</string>
    <string name="enter_secret_key">Enter secret key</string>
    <string-array name="credential_type">
        <item>Time based (TOTP)</item>
        <item>Counter based (HOTP)</item>
    </string-array>
    <string name="credential_manual_back">Back</string>
    <string name="credential_manual_add">Add</string>
    <string name="credential_manual_error">Incomplete credentials</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="add_account_scan">Scan account QR-code</string>
    <string name="add_account_manual">Add account manually</string>
    <string name="change_password">Change device password</string>
    <string name="password_required">Password required</string>
    <string name="input_required">Enter the missing values, and press Save</string>
    <string name="yubikey_neo">YubiKey NEO</string>
    <string name="wrong_password">Incorrect password</string>
    <string name="default_issuer">Issuer</string>
    <string name="default_code">012345</string>
    <string name="default_label">Label</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="read_hotp">Read a HOTP code</string>
    <string name="delete_cred">Delete credential</string>
    <string name="deleted">Credential deleted!</string>
    <string name="password">Password</string>
    <string name="old_password">Current password</string>
    <string name="new_password">New password (blank for none)</string>
    <string name="verify_password">Verify password</string>
    <string name="password_mismatch">Verify password doesn\'t match New password!</string>
    <string name="remember_password">Remember password</string>
    <string name="password_updated">Password updated!</string>
    <string name="display_name">Display name</string>
    <string name="clear_data">Clear stored passwords</string>
    <string name="clear_countdown">Press %1$d times more to clear...</string>
    <string name="data_cleared">Stored passwords cleared!</string>
    <string name="storage_full">YubiKey NEO storage is full!</string>
    <string name="about">About</string>
    <string name="about_text"><![CDATA[
<p><b>About</b><br/>
Yubico Authenticator for Android<br/>
Version: %1$s</p>

<p><a href="https://developers.yubico.com/yubioath-android/">Web site</a><br/>
<br/><a href="https://github.com/Yubico/yubioath-android/">Source code</a><br/>
<br/><a href="http://www.youtube.com/watch?v=W7if0FW12D0">Demo video</a></p>

<p>Yubico Authenticator requires a YubiKey NEO with the <a href="https://developers.yubico.com/ykneo-oath/">ykneo-oath applet</a> loaded.</p>

<p>Copyright 2013, Yubico<br/>
<a href="http://www.yubico.com/">http://www.yubico.com/</a></p>]]></string>

</resources>
